--- a/GuestBook/src/app/app.component.html
+++ b/GuestBook/src/app/app.component.html
@@ -1,4 +1,5 @@
-﻿<h1>Application says what?</h1>
-<ul *ngFor="let value of apiValues">
-  <li>{{value}}</li>
-</ul>
+﻿<h1>The Pasha's Wall</h1>
+    <div *ngFor="let post of posts">
+      <h3>{{post.title}}<small><i> at {{post.creationTime.toLocaleString()}}</i></small></h3>
+        <p>{{post.content}}</p>
+    </div>
