Added Poster component

--- a/GuestBook/src/app/app.component.html
+++ b/GuestBook/src/app/app.component.html
@@ -1,4 +1,6 @@
 ﻿<h1>The Pasha's Wall</h1>
+    <poster-comp></poster-comp>
+    <br/>
     <div *ngFor="let post of posts">
       <h3>{{post.title}}<small><i> {{post.creationTime | date:"MM/dd/yyyy 'at' h:mma"}}</i></small></h3>
         <p>{{post.content}}</p>
