--- a/GuestBook/src/app/app.component.html
+++ b/GuestBook/src/app/app.component.html
@@ -1,7 +1,16 @@
 ﻿<h1>The Pasha's Wall</h1>
     <poster-comp></poster-comp>
-    <br/>
-    <div *ngFor="let post of posts">
-      <h3>{{post.title}}<small><i> {{post.creationTime | date:"MM/dd/yyyy 'at' h:mma"}}</i></small></h3>
-        <p>{{post.content}}</p>
-    </div>
+<br/>
+<form class ="form-inline">
+    <input type="search" class="form-control" placeholder="Search..">
+    <select class="form-control">
+        <option>In title</option>
+        <option>In content</option>
+        <option>In title or content</option>
+    </select>
+</form>
+<br/>
+<div *ngFor="let post of posts">
+    <h3>{{post.title}}<small><i> {{post.creationTime | date:"MM/dd/yyyy 'at' h:mma"}}</i></small></h3>
+    <p>{{post.content}}</p>
+</div>
