--- a/GuestBook/src/app/app.component.html
+++ b/GuestBook/src/app/app.component.html
@@ -2,12 +2,13 @@
     <poster-comp></poster-comp>
 <br/>
 <form class ="form-inline">
-    <input type="search" class="form-control" placeholder="Search..">
-    <select class="form-control">
-        <option>In title</option>
-        <option>In content</option>
-        <option>In title or content</option>
+    <input type="search" class="form-control" placeholder="Search.." ngChange="reload()" name = "template" [(ngModel)]="template">
+    <select class="form-control" ng-change="reload()" name = "region" [(ngModel)]="region">
+        <option value="title">In title</option>
+        <option value="content">In content</option>
+        <option value="both">In title or content</option>
     </select>
+    <button type="submit" class="btn btn-default" (click)="reload()">Go!</button>
 </form>
 <br/>
 <div *ngFor="let post of posts">
