--- a/GuestBook/src/app/app.component.html
+++ b/GuestBook/src/app/app.component.html
@@ -3,10 +3,9 @@
 <br/>
 <form class ="form-inline">
     <input type="search" class="form-control" placeholder="Search.." (change)="reload()" name = "template" [(ngModel)]="template">
-    <select class="form-control" (change)="reload()" name = "region" [(ngModel)]="region">
-        <option value="title">In title</option>
-        <option value="content">In content</option>
-        <option value="both">In title or content</option>
+    <select (change)="reload()" name="region" [(ngModel)]="region"
+            ng-options="option.desc for option in regions track by option.value"
+            id ="region-select">
     </select>
     <button type="submit" class="btn btn-default" (click)="reload()">Go!</button>
 </form>
