--- a/GuestBook/src/app/app.component.html
+++ b/GuestBook/src/app/app.component.html
@@ -3,9 +3,9 @@
 <br/>
 <form class ="form-inline">
     <input type="search" class="form-control" placeholder="Search.." (change)="reload()" name = "template" [(ngModel)]="template">
-    <select (change)="reload()" name="region" [(ngModel)]="region"
+    <select name="region" id ="region-select" 
             ng-options="option.desc for option in regions track by option.value"
-            id ="region-select">
+            [(ngModel)]="region" (change)="reload()">
     </select>
     <button type="submit" class="btn btn-default" (click)="reload()">Go!</button>
 </form>
