--- a/GuestBook/src/app/app.component.html
+++ b/GuestBook/src/app/app.component.html
@@ -4,7 +4,7 @@
         <poster-comp></poster-comp>
         <br />
         <form class="form-inline">
-            <input type="search" class="form-control" placeholder="Search.." (change)="reload()" name="template" [(ngModel)]="template">
+            <input type="search" class="form-control" placeholder="Search.." (input)="reload()" name="template" [(ngModel)]="template">
             <select class="form-control" (change)="reload()" name="region" [(ngModel)]="region">
                 <option value="title">In title</option>
                 <option value="content">In content</option>
