--- a/GuestBook/src/app/poster.component.html
+++ b/GuestBook/src/app/poster.component.html
@@ -5,7 +5,7 @@
     </div>
     <div class="form-group">
         <label for="content">Content</label>
-        <input type="text" class="form-control" name ="content" [(ngModel)] ="content" placeholder="Your content here">
+        <textarea type="text" rows="5" class="form-control" name="content" [(ngModel)]="content" placeholder="Your content here"></textarea>
     </div>
     <button type="submit" class="btn btn-default" (click)="post(title, content)">Post it!</button>
 </form>
