--- a/GuestBook/src/app/app.component.html
+++ b/GuestBook/src/app/app.component.html
@@ -1,29 +1,37 @@
 ﻿<div>
+    <header class="small">
+        <div class="text-center">
+            <h1>The Pasha's Wall</h1>
+        </div>
+    </header>
     <div class="container">
-        <h1>The Pasha's Wall</h1>
-        <poster-comp (onPosted)="onPosted($event)"></poster-comp>
-        <br />
-        <form class="form-inline">
-            <input type="search" class="form-control" placeholder="Search.." (input)="reload()" name="template" [(ngModel)]="template">
-            <select class="form-control" (change)="reload()" name="region" [(ngModel)]="region">
-                <option value="title">In title</option>
-                <option value="content">In content</option>
-                <option value="both">In title or content</option>
-            </select>
-            <button type="submit" class="btn btn-default" (click)="reload()">Go!</button>
-        </form>
-        <br />
-        <div *ngIf="posts.length==0">
-            <p>Your search query has no results!</p>
+        <div class="col-md-6 col-md-offset-3">
+            <poster-comp (onPosted)="onPosted($event)"></poster-comp>
+            <br />
+            <form class="form-inline">
+                <input type="search" class="form-control" placeholder="Search.." (input)="reload()" name="template" [(ngModel)]="template">
+                <select class="form-control" (change)="reload()" name="region" [(ngModel)]="region">
+                    <option value="title">In title</option>
+                    <option value="content">In content</option>
+                    <option value="both">In title or content</option>
+                </select>
+                <button type="submit" class="btn btn-default" (click)="reload()">Go!</button>
+            </form>
+            <br />
+            <div *ngIf="posts.length==0">
+                <p>Your search query has no results!</p>
+            </div>
+            <div *ngFor="let post of posts">
+                <h3>
+                    {{post.title}}<small><i> {{post.creationTime | date:"MM/dd/yyyy 'at' h:mma"}}</i></small>
+                </h3>
+                <p>{{post.content}}</p>
+            </div>
+            <ul class="pagination">
+                <li *ngFor="let page of range(1, totalPages)" [ngClass]="{active:page === currentPage}">
+                    <a (click)="setPage(page)">{{page}}</a>
+                </li>
+            </ul>
         </div>
-        <div *ngFor="let post of posts">
-            <h3>{{post.title}}<small><i> {{post.creationTime | date:"MM/dd/yyyy 'at' h:mma"}}</i></small></h3>
-            <p>{{post.content}}</p>
-        </div>
-        <ul class="pagination">
-            <li *ngFor="let page of range(1, totalPages)" [ngClass]="{active:page === currentPage}">
-                <a (click)="setPage(page)">{{page}}</a>
-            </li>
-        </ul>
     </div>
 </div>
