--- a/GuestBook/src/app/poster.component.html
+++ b/GuestBook/src/app/poster.component.html
@@ -1,11 +1,11 @@
 ﻿<form>
-    <div class="form-group">
+    <div class="form-group" [ngClass]="{ 'has-error': titleInput.invalid && !titleInput.untouched}">
         <label for="title">Title</label>
-        <input type="text" class="form-control" name ="title" [(ngModel)] ="title" placeholder="Title">
+        <input type="text" class="form-control" name ="title" [(ngModel)] ="title" placeholder="Title" #titleInput="ngModel" required>
     </div>
-    <div class="form-group">
+    <div class="form-group" [ngClass]="{ 'has-error': contentInput.invalid && !contentInput.untouched}">
         <label for="content">Content</label>
-        <textarea type="text" rows="5" class="form-control" name="content" [(ngModel)]="content" placeholder="Your content here"></textarea>
+        <textarea type="text" rows="5" class="form-control" name="content" [(ngModel)]="content" placeholder="Your content here" #contentInput="ngModel" required></textarea>
     </div>
-    <button type="submit" class="btn btn-default" (click)="post(title, content)">Post it!</button>
+    <button [disabled]="titleInput.invalid || contentInput.invalid" type="submit" class="btn btn-default" (click)="post(title, content)">Post it!</button>
 </form>
