--- a/GuestBook/src/app/poster.component.html
+++ b/GuestBook/src/app/poster.component.html
@@ -1,4 +1,4 @@
-﻿<form>
+﻿<form #postForm="ngForm">
     <div class="form-group" [ngClass]="{ 'has-error': titleInput.invalid && !titleInput.untouched}">
         <label for="title">Title</label>
         <input type="text" class="form-control" name ="title" [(ngModel)] ="title" placeholder="Title" #titleInput="ngModel" required>
@@ -7,5 +7,5 @@
         <label for="content">Content</label>
         <textarea type="text" rows="5" class="form-control" name="content" [(ngModel)]="content" placeholder="Your content here" #contentInput="ngModel" required></textarea>
     </div>
-    <button [disabled]="titleInput.invalid || contentInput.invalid" type="submit" class="btn btn-default" (click)="post(title, content)">Post it!</button>
+    <button [disabled]="titleInput.invalid || contentInput.invalid" type="submit" class="btn btn-default" (click)="post(title, content); postForm.reset()">Post it!</button>
 </form>
